ncc/testsuite/negative/void-parm2.n
module M {
  public Main () : void // OK
  {
    [()].Iter ( // E: cannot use `void' as a generic parameter of Nemerle.Core.list
      fun (_) {
      }
    );

    // bug 628
    def f (_)
      {}

    [1,2].Map (f).ToString (" ") // E: cannot use `void' as a generic parameter of Nemerle.Core.list

  }
}
